fix letter spacing

--- a/assembl/static2/css/views/home.scss
+++ b/assembl/static2/css/views/home.scss
@@ -55,7 +55,7 @@
       color: $white;
       font-family: $font-family3;
       font-size: $font-size-xs;
-      letter-spacing: .2px;
+      letter-spacing: .7px;
     }
 
     img {
